syntax = "proto3";

package proto;

option go_package = "proto;proto";

message SensorData {
  float temp = 1;
  float hmd = 2;
}

message Response {
  string msg = 1;
}

service NodeService {
  rpc UploadData(SensorData) returns (Response);
}